[gd_scene load_steps=9 format=3 uid="uid://bf3k14kdi4j7c"]

[ext_resource type="Script" uid="uid://b7hprdh6ygcj5" path="res://scripts/ui/old_pause_menu.gd" id="1_n87rw"]
[ext_resource type="LabelSettings" uid="uid://bp62ly32vprqu" path="res://assets/ui_label_option.tres" id="2_kukqi"]
[ext_resource type="LabelSettings" uid="uid://cd7px3pct7pkj" path="res://assets/ui_label_option_selected.tres" id="3_5d2l8"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="5_2rlsb"]
[ext_resource type="PackedScene" uid="uid://cpy8lyds6schd" path="res://scenes/ui/old_settings_menu.tscn" id="5_coo1x"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="6_coo1x"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="7_2jkta"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="8_ht4ye"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("_options")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")
_options = [NodePath("VBoxContainer/Resume"), NodePath("VBoxContainer/Settings"), NodePath("VBoxContainer/Quit")]
_wrap_around = false
_attach_cursor_to_option = 1
_attach_offset = Vector2(0, 5)
_horizontal_navigation = false

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_2rlsb")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_coo1x")
initial_state = NodePath("Closed")

[node name="Closed" type="Node" parent="StateChart/Root"]
script = ExtResource("7_2jkta")

[node name="On Open" type="Node" parent="StateChart/Root/Closed"]
script = ExtResource("8_ht4ye")
to = NodePath("../../Open")
event = &"open"
delay_in_seconds = "0.0"

[node name="Open" type="Node" parent="StateChart/Root"]
script = ExtResource("6_coo1x")
initial_state = NodePath("Active")

[node name="On Close" type="Node" parent="StateChart/Root/Open"]
script = ExtResource("8_ht4ye")
to = NodePath("../../Closed")
event = &"close"
delay_in_seconds = "0.0"

[node name="Active" type="Node" parent="StateChart/Root/Open"]
script = ExtResource("7_2jkta")

[node name="On Modal" type="Node" parent="StateChart/Root/Open/Active"]
script = ExtResource("8_ht4ye")
to = NodePath("../../HasModal")
event = &"open_modal"
delay_in_seconds = "0.0"

[node name="HasModal" type="Node" parent="StateChart/Root/Open"]
script = ExtResource("7_2jkta")

[node name="On Focus" type="Node" parent="StateChart/Root/Open/HasModal"]
script = ExtResource("8_ht4ye")
to = NodePath("../../Active")
event = &"close_modal"
delay_in_seconds = "0.0"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -184.0
offset_right = 63.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = ExtResource("2_kukqi")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -71.0
offset_right = 147.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Resume" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Resume"
label_settings = ExtResource("3_5d2l8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Settings"
label_settings = ExtResource("2_kukqi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Quit Game"
label_settings = ExtResource("2_kukqi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsMenu" parent="." instance=ExtResource("5_coo1x")]
visible = false

[connection signal="cancel" from="." to="." method="_resume"]
[connection signal="option_highlighted" from="." to="." method="_on_option_highlighted"]
[connection signal="option_selected" from="." to="." method="_on_option_selected"]
[connection signal="state_input" from="StateChart/Root/Closed" to="." method="_on_closed_state_input"]
[connection signal="state_input" from="StateChart/Root/Open/Active" to="." method="_on_active_state_input"]
[connection signal="settings_closed" from="SettingsMenu" to="." method="_on_settings_menu_settings_closed"]
